[project]
name = "mmgraphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nano-vectordb>=0.0.4.3",
    "openai>=2.5.0",
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "ultralytics>=8.3.217",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu129"
